# psyc

./: .gitattributes  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  entrypoint_linux.psy  entrypoint_win32.psy  generated_ir_linux_printsq.elf  generated_ir_linux_ret0.elf  irtest.psy  libpsyc.psy  llvm.cmake  preload.psy  psyc.cpp  psyc.cpp~  psyc.cpz~  psyc.psy  psyutil.psy  test.psy  testx64.psy  tmp2.psyir  ver.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/: run_tests.yml
.github/actions/fetch-compiler-win32/: action.yml
.github/actions/fetch-latest-psyc/: action.yml
.github/actions/install-psyc/: action.yml
.github/actions/run_samples/: action.yml
.github/actions/run_tests/: action.yml
.github/workflows/: bootstrap.yml  build_clang.yml  build_gcc.yml  build_linux.yml  build_msvc.yml  build_psyc.yml  ci_linux.yml  code_build_debug.yml  code_build_release.yml  fetch-compiler-win32.yml  helloworld.yml  print_version.yml  psyc-version.yml  run_tests.yml
cpp/: CMakeLists.txt  CMakePresets.json
cpp/src/: ast.cpp  ast.hpp  build.cpp  build.hpp  builtin.cpp  builtin.hpp  codegen.cpp  codegen.hpp  codegenold.cpp  config.hpp  diag.hpp  error.hpp  lex.cpp  lex.hpp  link.cpp  link.hpp  parse.cpp  parse.hpp  psyc_main.cpp  semal.cpp  semal.hpp  semantic.cpp  semantic.hpp  session.hpp  settings.hpp  srcloc.hpp  timer.hpp  type.cpp  type.hpp  util.cpp  util.hpp
cpp/src2/: ast.cpp  ast.hpp  config.hpp  diag.hpp  error.hpp  lex.cpp  lex.hpp  parse.cpp  parse.hpp  parse_designated_initialiser.cpp  parse_designated_initialiser_list.cpp  parse_expression.cpp  parse_expression_list.cpp  parse_function_call.cpp  parse_function_decl.cpp  parse_identifier.cpp  parse_if_statement.cpp  parse_integer_literal.cpp  parse_literals.cpp  parse_macros.hpp  parse_meta_region.cpp  parse_namespace_access.cpp  parse_null_literal.cpp  parse_primary_expression.cpp  parse_token.cpp  parse_unfinished_block.cpp  parse_unfinished_struct.cpp  parse_variable_decl.cpp  parse_variable_decl_list.cpp  parser.cpp  parser.hpp  profile.cpp  profile.hpp  psyc_main.cpp  semal.cpp  semal.hpp  srcloc.hpp  static.cpp  static.hpp  timer.cpp  (+4 more)
cpp/src2/parse_chords/: parse_designated_initialiser.inl  parse_designated_initialiser_list.inl  parse_expression.inl  parse_expression_list.inl  parse_function_decl.inl  parse_identifier.inl  parse_if_statement.inl  parse_literals.inl  parse_macro_decl.inl  parse_meta_region.inl  parse_namespace_access.inl  parse_token.inl  parse_unfinished_block.inl  parse_variable_decl.inl  parse_variable_decl_list.inl
cpp/test/: CMakeLists.txt
cpp/test/functional_tests/: CMakeLists.txt
examples/: wnd.psy
misc/: loc.sh
misc/vim/ftdetect/: psy.vim
misc/vim/syntax/: psy.vim
psy/src/: cli.psy  psyc.psy
runtime/: entrypoint_linux.psy  entrypoint_linux_2.psy  entrypoint_win32.psy  entrypoint_win32_2.psy  preload.psy  preload2.psy
samples/: hello_world.psy  minimal.c  minimal.psy  no_param_functions.psy  param_functions.psy  scratchpad.psy
src/: _linux.psy  _win32.psy  args.psy  assemble.psy  assembly.psy  ast.psy  brogram.psy  build.psy  builtin.psy  builtin2.psy  builtin_function.psy  bytecode.psy  cg.psy  cg2.psy  cgv.psy  codegen.psy  codegen_avalue.psy  codegen_btables.psy  codegen_builtin.psy  codegen_conv.psy  codegen_node.psy  codegen_tables.psy  codegen_value.psy  compile.psy  cstr.psy  datalayout.psy  dbg.psy  debug.psy  diag.psy  grammar.psy  grammar_rules.psy  grammar_table.psy  hash.psy  lex.psy  link.psy  llvm.psy  parse.psy  prog.psy  program.psy  progwalk.psy  (+19 more)
src/backend/: abi.psy  chunk.psy  codegen.psy  datalayout.psy  val.psy
src/backend/arm64/: arm64p.psy
src/backend/elf/: elf.psy  elf_writer.psy
src/backend/exe/: elf.psy  pe.psy
src/backend/ir/: _irapi.psy  backend_ir.psy  cg.psy  chunk.psy  codegen.psy  datalayout.psy  dbg.psy  dump.psy  igraph.psy  ir.psy  ir_instruction_api.psy  ir_lower_x64.psy  ir_lower_x64_blk.psy  ir_lower_x64_func.psy  ir_lower_x64_glob.psy  ir_lower_x64_inst.psy  ir_lower_x64_val.psy  irabi.psy  irabi_psy64.psy  irasm.psy  irblk.psy  irchunk.psy  irfunc.psy  irglob.psy  irinst.psy  irpatch.psy  irprog.psy  irval.psy  lower_x64.psy  lower_x64_blk.psy  lower_x64_func.psy  lower_x64_glob.psy  lower_x64_igraph.psy  lower_x64_inst.psy  lower_x64_val.psy  pass_dead_block_elimination.psy  pass_dead_glob_elimination.psy  pass_dead_reg_elimination.psy  pass_register_alias.psy  pass_validate.psy
src/backend/llvm/: assemble.psy  backend_llvm.psy  cg.psy  datalayout.psy  dbg.psy  link.psy
src/backend/psyir/: abi.psy  (+10 more)
src/common/: arena.psy  endian.psy  err.psy  file.psy  io.psy  linux_syscalls_x64.psy  math.psy  mem.psy  parse_util.psy  proc.psy  string.psy
src/elf/: elf.psy
src/frontend/: args.psy  ast.psy  build.psy  buildinst.psy  buildmeta.psy  builtin.psy  codegen.psy  compile.psy  datalayout.psy  diag.psy  grammar.psy  grammar_hashtable.psy  grammar_rules.psy  grammar_table.psy  lex.psy  parse.psy  progwalk.psy  s.psy  semal.psy  shell.psy  tokenise.psy  tokenise_tables.psy  treewalk.psy  ty.psy  tybox.psy  type.psy  val.psy
src/llvm/: assemble.psy  cg.psy  dbg.psy  link.psy
src/psyir/: assemble.psy  cg.psy  dbg.psy  disasm.psy  ir.psy  irapi.psy  irf.psy  iri.psy  irp.psy  irv.psy  lower_x64.psy
src/x64/: abi.psy  encoding.psy  x64g.psy
src/x86_64/: abi.psy  disasm.psy  encoding.psy  encoding_tbl.psy  ir_transpile.psy  x64api.psy  x64f.psy  x64g.psy  x64i.psy  x64p.psy  x64v.psy  x86_64.psy
src2/: args.psy  assembly.psy  ast.psy  build.psy  codegen.psy  codegen_builtin.psy  codegen_conv.psy  codegen_node.psy  codegen_tables.psy  codegen_value.psy  diag.psy  grammar.psy  llvm.psy  parse.psy  progwalk.psy  sval_node.psy  type_parse.psy
stdlib/: io.psy  mem.psy  stdlib.psy
test/: _all_tests.psy  _test_helper.psy  ir_linux_float_arith.psy  ir_linux_helloworld.psy  ir_linux_printsq.psy  ir_linux_ret0.psy  ir_linux_return_value.psy  sval_adds.psy  sval_divs.psy  sval_literals.psy  sval_muls.psy  sval_subs.psy  x64_linux_helloworld.psy  x64_linux_ret0.psy
test/manual/: x64_ret0.psy
(+37 files in other folders)
